--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.2",
     "sort-by": "^1.2.0",
